@@ -1,3 +1,5 @@
+[COLOR yellow][B]v1.5.2[/B][/COLOR]
+* Add Real Debrid Speed test function (Android/Windows only).
 [COLOR yellow][B]v1.5.1[/B][/COLOR]
 * Windows kodi auto update - remove open browser, direct download only.
 [COLOR yellow][B]v1.5.0[/B][/COLOR]
